--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,15 @@ greenlet==1.1.3
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
+numpy==1.23.3
+pandas==1.4.4
 pydantic==1.10.2
+python-dateutil==2.8.2
 python-dotenv==0.21.0
+python-multipart==0.0.5
+pytz==2022.2.1
 PyYAML==6.0
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.41
 starlette==0.19.1
